css/style.css
body{
    font-family:'Times New Roman', 'sans-serif';
    background-color: #000000;
    color: #ffffff
}

h1{
    font-size: 64px;
    text-align: center;
    padding: 10px;
}

h2{
    font-size: 32px;
    text-shadow: #808080;
    offset: right 4px top 4px;
    
}

p{
    font-size:24px;
    padding: 15px;
}

img{
    margin-left: auto;
    margin-right: auto;
    width: 550px;
}

div{
    height: 150px;
    padding-top: 25px;
    padding-right: 25px;
    padding-bottom: 25px;
    padding-left: 25px;
}

.red{
    background-color:#ff0000;
    text-align: right;
}

.blue{
    background-color:#0000ff;
    text-align: left;
}

.yellow{
    background-color:#ffff00;
    text-align:right;
}

.green{
    background-color: #008000;
    text-align: left;
}

